@@ -77,6 +77,7 @@ VL_PROG_CC_WARNINGS()
 
 AC_PROG_INSTALL
 AC_PROG_LN_S
+AC_LIBTOOL_WIN32_DLL
 AC_PROG_LIBTOOL
 AC_LIBTOOL_WIN32_DLL
 
